# file-grouper

./: .gitignore  .travis.yml  LICENSE  README.md  file-grouper.cabal  image-sorter.cabal
app/: Main.hs  Options.hs
src/: Files.hs  Groups.hs
test/: GroupsSpec.hs
test/Data/String/: StripExample.hs
