name:                file-grouper
version:             1.0.0
synopsis:            Group files
description:         A program that groups files according to some predicates
homepage:            https://github.com/AntoineGagne/file-grouper#readme
license:             BSD3
license-file:        LICENSE
author:              Antoine Gagné
maintainer:          antoine.gagne.2@ulaval.ca
copyright:           2017 Antoine Gagné
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Files
                     , Groups
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , directory
                     , easy-file
                     , filemanip
                     , time
  default-language:    Haskell2010

executable file-grouper
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       Options
  ghc-options:         -O3 -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , containers
                     , file-grouper
                     , filemanip
                     , optparse-applicative
  default-language:    Haskell2010

test-suite file-grouper-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , containers
                     , file-grouper
                     , hspec
                     , QuickCheck
                     , time
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/AntoineGagne/file-grouper
