name:                image-sorter
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/image-sorter#readme
license:             BSD3
license-file:        LICENSE
author:              Antoine Gagné
maintainer:          antoine.gagne.2@ulaval.ca
copyright:           2017 Antoine Gagné
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Groups
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , time
  default-language:    Haskell2010

executable image-sorter
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , image-sorter
  default-language:    Haskell2010

test-suite image-sorter-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , image-sorter
                     , hspec
                     , QuickCheck
                     , time
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/image-sorter
